--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ui:add": "pnpm dlx shadcn@latest add"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
